tests/paczka1/fuzzy1/62162369.err
Error in line 5: MJEAytodBY S535 -2,4
Error in line 14: i9y4eNQ S202 44,2
Error in line 19: MJEAytodBY S535 342,7
Error in line 23: f1Gx A807 69,2
Error in line 34: MJEAytodBY S202 6,7
